<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox_id"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/inbox" />


        <item
            android:id="@+id/starred_id"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/starred" />

        <item
            android:id="@+id/sentmail_id"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/sent_mail" />
        <item
            android:id="@+id/draft_mail_id"
            android:icon="@drawable/ic_drafts_black_24dp"
            android:title="@string/draft_mail" />
    </group>


    <item android:title="@string/subheader" >

        <menu>
            <item android:title="@string/all_email"
                android:id="@+id/all_mail_id"
                android:icon="@drawable/ic_email_black_24dp"/>

            <item android:title="@string/trash"
                android:id="@+id/trash_id"
                android:icon="@drawable/ic_delete_black_24dp"/>


            <item android:title="@string/spam"
                android:id="@+id/spam_email_id"
                android:icon="@drawable/ic_warning_black_24dp"/>


        </menu>
    </item>

</menu>